--- a/S02_EcuacionesLinealesCuadraticas.ipynb
+++ b/S02_EcuacionesLinealesCuadraticas.ipynb
@@ -1148,7 +1148,52 @@
     "4. **Optimización de Área:** Un agricultor tiene 100 metros de cerca para delimitar un corral rectangular contra un muro existente, usando el muro como uno de los lados del corral. ¿Cuáles son las dimensiones del corral que maximizan el área?\n",
     "<p>&nbsp;</p>\n",
     "\n",
-    "5. **Punto de Quiebre en Costos:** Una empresa de construcción tiene un costo fijo de $\\$10,000$ y un costo variable de $\\$500$ por unidad producida. Si el precio de venta por unidad es de $\\$800$, ¿cuántas unidades debe producir y vender la empresa  para no tener pérdidas ni ganancias?"
+    "6. **Problema de Cinética 2 - Tiro parabólico:** El ex jugador de baloncesto de la NBA, Michael Jordan fue famoso por sus saltos pues parecía mantenerse suspendido en la altura máxima de su salto mientras se dirigía hacia la canasta del equipo contrario; el movimiento de su cuerpo describía una parábola muy alargada, al igual que el balón sostenido por él.\n",
+    "\n",
+    "Los diferentes niveles de altura que alcanzaba el balón sostenido por Michael Jordan se pueden calcular mediante una expresión matemática conocida como ecuación de movimiento. Ésta es una ecuación cuadrática que permite calcular la altura (h) alcanzada por el balón después de cierto tiempo (t) y está determinada por:\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/EqnCuadratica_Cinetica_TiroParabolico.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Determine la altura alcanzada cuando el tiempo es de 0.74s. Muestre el resultado con dos decimales.\n",
+    "\n",
+    "7. **Problema de Cinética 2 - Caída libre:** \n",
+    "\n",
+    "Para los cuerpos lanzados verticalmente hacia arriba, libres en su ascenso de toda resistencia, la mecánica establece la siguiente ecuación general de movimiento:\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/EqnCuadratica_Cinetica_CaidaLibre.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Si una pelota es lanzada al aire a una velocidad de 12 m/s, ¿al cabo de cuántos segundos se encontrará la pelota a 8 m de altura? Considera que la pelota se lanza desde una altura inicial de 1.71 m.\n",
+    "\n",
+    "8. **Problema de Climatología:** Los fenómenos físicos se puede describir con múltiples modelos matemáticos, los cuales se ajustan con mayor o menor precisión al comportamiento real del fenómeno. Por ejemplo, el estudio del clima, su distribución y sus variaciones.\n",
+    "\n",
+    "La temperatura sobre la superficie terrestre no es uniforme, pues presenta variaciones de temperatura en cada uno de los hemisferios y en las diferentes latitudes. Éstas también se pueden ajustar a modelos matemáticos que describen su comportamiento.\n",
+    "\n",
+    "Ahora analizaremos dos modelos matemáticos, uno lineal y uno cuadrático para ver cuál de ellos se ajusta a las mediciones indicadas. Éstos se encuentran conformados por:\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/EqnCuadratica_Climatologia.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Completa la tabla a continuación. Para ello, determina las temperaturas correspondientes a las latitudes indicadas, utilizando las ecuaciones de los modelos lineal y cuadrático.\n",
+    "\n",
+    "| T. Real [°F] | T. Modelo lineal [°F] | T. Modelo cuadrático [°F] |\n",
+    "|-------------|----------------------|--------------------------|\n",
+    "| 85°        |                      |                          |\n",
+    "| 75°        |                      |                          |\n",
+    "| 65°        |                      |                          |\n",
+    "| 55°        |                      |                          |\n",
+    "| 45°        |                      |                          |\n",
+    "| 35°        |                      |                          |\n",
+    "| 25°        |                      |                          |\n",
+    "| 15°        |                      |                          |\n",
+    "| 5°         |                      |                          |\n",
+    "\n",
+    "Realiza una gráfica en excel y compruebe el comportamiento lineal y cuadrático, comparándolo con el valor de temperaturas real. Realice sus propias conclusiones.\n",
+    "\n"
    ]
   },
   {
