--- a/S03_Trigonometria.ipynb
+++ b/S03_Trigonometria.ipynb
@@ -670,6 +670,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9f2bb23e-0423-4fc9-9c50-7596cbf23740",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.670810880796606"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "4*np.sin(82*np.pi/180)/np.sin(58*np.pi/180)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "86ec3ddb",
    "metadata": {},
@@ -1067,7 +1090,7 @@
    "id": "af67c97b",
    "metadata": {},
    "source": [
-    "### Ejemplos de identidades trigonométricas"
+    "### Ejercicios de identidades trigonométricas"
    ]
   },
   {
@@ -1077,13 +1100,13 @@
    "source": [
     "***Ejemplo 01:*** Demostrar si se cumple lo siguiente: $\\cos(60^\\circ) = \\sin(60^\\circ - 30^\\circ)$\n",
     "\n",
-    "***Ejemplo 02:*** Encontrar la razón trigonométrica de $\\sin(75^\\circ)$\n",
+    "***Ejercicio 02:*** Encontrar la razón trigonométrica de $\\sin(75^\\circ)$\n",
     "\n",
-    "***Ejemplo 03:*** Encontrar la razón trigonométrica de $\\cos(120^\\circ)$\n",
+    "***Ejercicio 03:*** Encontrar la razón trigonométrica de $\\cos(120^\\circ)$\n",
     "\n",
-    "***Ejemplo 04:*** Encontrar la razón trigonométrica de $\\tan(75^\\circ)$\n",
+    "***Ejercicio 04:*** Encontrar la razón trigonométrica de $\\tan(75^\\circ)$\n",
     "\n",
-    "***Ejemplo 05:*** Demostrar las identidadades:  \n",
+    "***Ejercicio 05:*** Demostrar las identidadades:  \n",
     "\n",
     "$\\frac{1}{sec^2(\\alpha)}=\\sin^2(\\alpha) \\cdot \\cos^2(\\alpha) + \\cos^4(\\alpha)$\n",
     "\n",
@@ -1093,7 +1116,7 @@
     "\n",
     "$\\frac{\\sec \\alpha}{\\tan \\alpha+\\cot \\alpha}=\\sin \\alpha$\n",
     "\n",
-    "***Ejemplo 06: Calcula las áreas de las regiones sombreadas:***\n",
+    "***Ejercicio 06: Calcula las áreas de las regiones sombreadas:***\n",
     "\n",
     "<p float=\"center\">\n",
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/RegionSombreada01.PNG?raw=true\" width=\"250\" />\n",
@@ -1103,23 +1126,57 @@
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/RegionSombreada02.PNG?raw=true\" width=\"250\" />\n",
     "</p>\n",
     "\n",
-    "***Ejemplo 07:*** Un topógrafo ha determinado que una montaña mide 2430 pies de altura De lo alto de la montaña él mide los ángulos de depresión a dos puntos de referencia en la base de la montaña y encuentra que son de 4242°y 39 (Observe que éstos son los mismos que los ángulos de elevación de los puntos de referencia como se ven en la figura) El ángulo entre las\n",
+    "***Ejercicio 07:*** Un topógrafo ha determinado que una montaña mide 2430 pies de altura De lo alto de la montaña él mide los ángulos de depresión a dos puntos de referencia en la base de la montaña y encuentra que son de 4242°y 39 (Observe que éstos son los mismos que los ángulos de elevación de los puntos de referencia como se ven en la figura) El ángulo entre las\n",
     "líneas de vista a los puntos de referencia es de 68 Calcule la distancia entre los dos puntos de referencia.\n",
     "\n",
     "<p float=\"center\">\n",
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Montana.jpg?raw=true\" width=\"250\" />\n",
     "</p>\n",
     "\n",
-    "***Ejemplo 08:*** Un asta está situada en la parte superior de un edificio de 115 pie de altura Desde un punto en el mismo plano horizontal de la base del edificio los ángulos de elevación de los extremos superior en inferior del asta son 63 22°y 58 6 respectivamente ¿Cuál es la longitud del asta?\n",
+    "***Ejercicio 08:*** Un asta está situada en la parte superior de un edificio de 115 pie de altura Desde un punto en el mismo plano horizontal de la base del edificio los ángulos de elevación de los extremos superior en inferior del asta son 63 22°y 58 6 respectivamente ¿Cuál es la longitud del asta?\n",
     "\n",
-    "***Ejemplo 09:*** Para medir la altura de un peñasco inaccesible en el lado opuesto de un rio, un topógrafo hace las mediciones presentadas en la figura Determine la altura del peñasco:\n",
+    "***Ejercicio 09:*** Para medir la altura de un peñasco inaccesible en el lado opuesto de un rio, un topógrafo hace las mediciones presentadas en la figura Determine la altura del peñasco:\n",
     "\n",
     "<p float=\"center\">\n",
     "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Penasco.jpg?raw=true\" width=\"250\" />\n",
     "</p>\n",
     "\n",
-    "***Ejemplo 10:*** Un helicóptero permanece en posición fija a una altitud de $1000 \\mathrm{ft}$ sobre el pico de una montaña de $5210 \\mathrm{ft}$, un segundo pico mas alto se ve desde la primera montaña y el helicóptero. De este ultimo el ángulo de depresión es de $45^{\\circ}$ y desde la cuna de la montaña $30^{\\circ}$. Determinar: a) la distancia entre los dos picos y b) la atura del pico mas alto.\n"
+    "***Ejercicio 10:*** Un helicóptero permanece en posición fija a una altitud de $1000 \\mathrm{ft}$ sobre el pico de una montaña de $5210 \\mathrm{ft}$, un segundo pico mas alto se ve desde la primera montaña y el helicóptero. De este ultimo el ángulo de depresión es de $45^{\\circ}$ y desde la cuna de la montaña $30^{\\circ}$. Determinar: a) la distancia entre los dos picos y b) la atura del pico mas alto.\n",
+    "\n",
+    "***Ejercicio 11:*** Carlos desea calcular la altura de dos edificios que están situados a 100 metros el uno del otro. Como tiene acceso al edificio más alto, observa que desde la azotea de dicho edificio (punto A ) se avista la azotea del otro (punto B) bajo un ángulo de $\\alpha=73,3^{\\circ}$. Desde la base del mismo edificio, se ve la azotea del otro edificio bajo un ángulo de $\\beta=19,29^{\\circ}$.\n",
+    "¿Puede Carlos calcular la altura de los edificios con los tres datos con los que cuenta? En caso afirmativo, ¿cuál es la altura de cada uno? \n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Trigonometria11.PNG?raw=true\" width=\"200\" />\n",
+    "</p>\n",
+    "\n",
+    "***Ejercicio 12:*** En la construcción de un edificio se está usando una grúa para mover vigas. La grúa tiene dos cadenas de longitud $x$ que sujetan las vigas desde sus extremos forman un ángulo $\\alpha$ entre sí:\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Trigonometria12.PNG?raw=true\" width=\"150\" />\n",
+    "</p>\n",
+    "\n",
+    "Responde:\n",
+    "1. Si la viga mide 5 metros y las cadenas forman un ángulo $\\alpha=45^{\\circ}$, ¿cuánto miden las cadenas? ¿Cuál es la distancia de la viga al garfio de la grúa?\n",
+    "2. Si la viga mide 2 metros y las cadenas miden 2.28 metros, ¿qué ángulo $\\alpha$ forman las cadenas? ¿Cuál es la distancia de la viga al garfio de la grúa?\n",
+    "3. Si las cadenas miden 6 metros y forman un ángulo $\\alpha=60^{\\circ}$, ¿cuánto mide la viga? ¿Cuál es la distancia de la viga al garfio de la grúa?\n",
+    "\n",
+    "***Ejercicio 13:*** En la parte superior de una pared de 3 metros de altura y 6 de ancho se colocan un foco de luz amarilla con ángulo de apertura $\\alpha$ y otro de luz roja con ángulo $\\beta$, de modo que los triángulos isósceles amarillo y rojo que proyectan los focos se solapan formando otro triángulo naranja con un ángulo $\\sigma$ :\n",
+    "\n",
+    "<p float=\"center\">\n",
+    "  <img src=\"https://github.com/carlosalvarezh/Geometria_Analitica_Vectorial/blob/main/Images/Trigonometria13.PNG?raw=true\" width=\"250\" />\n",
+    "</p>\n",
+    "\n",
+    "Determinar la amplitud de los ángulos $\\alpha, \\beta$ y $\\sigma$ sabiendo que el área del triángulo amarillo es de $3.75 \\mathrm{~m}^2$ y el del triángulo rojo es de $6.75 \\mathrm{~m}^2$.\n",
+    "\n",
+    "Nota: las áreas de los triángulos no excluyen la del triángulo naranja (su área se cuenta en ambas áreas)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b2053fc",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -1138,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   },
   "toc": {
    "base_numbering": 1,
